fixed home image header and container alignment for mobile devices

--- a/src/styles/episodes.css
+++ b/src/styles/episodes.css
@@ -21,14 +21,21 @@
 }
 
 .episodes-container {
+	/* margin-left: auto;
+	margin-right: auto;
+	width: 50%; */
 	vertical-align: top;
-	display: inline-block;
-	justify-content: space-around;
+	display: inline-flex;
+	justify-content: center;
+	text-align: center;
 }
 
 .episode-container {
-	display: inline-block;
-	padding: 32px;
+	display: block;
+	/* padding: 32px; */
+	justify-content: center;
+	padding-top: 32px;
+	padding-bottom: 32px;
 	width: 300px;
 	text-align: center;
 }
