--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -55,16 +55,32 @@
 	/* position: relative; */
 }
 
-@media only screen and (max-width: 730px) {
+@media only screen and (max-device-width: 730px) {
+	.home-container {
+		text-align: center;
+		margin: 0px;
+	}
+
 	.other-pages {
 		margin-left: 0px;
 	}
 
 	.header-image {
 		margin-left: 0px;
+		float: none;
+		width: 150px;
+		margin-right: 0px;
 	}
 
 	.header-container {
 		padding-left: 32px;
+		text-align: center;
+	}
+
+	.episode-description-container {
+		width: 80%;
+		margin-left: 10%;
+		margin-right: 10%;
+		text-align: center;
 	}
 }
